# tamil-keyboard

./: .gitignore  LAYOUT.md  PLAN.md  QUICK-MONEY.md  README.md  THOLKAAPIUM.md  pm0100-keymap.json
apps/illakiya/: .gitignore  README.md
apps/illakiya/android/: settings.gradle.kts
apps/illakiya/android/app/: build.gradle.kts  proguard-rules.pro
apps/illakiya/core-rust/: Cargo.toml  build.rs  uniffi.toml
apps/illakiya/core-rust/src/: dictionary.rs  engine.rs  illakiya.udl  layout.rs  lib.rs  sandhi.rs  tamil.rs
apps/illakiya/data/dictionary/: tamil_base.json
apps/illakiya/data/layouts/: pm0100.json
apps/illakiya/docs/: ANDROID_SETTINGS_GUIDE.md  BRIDGE.md  PLAN.md  SPEC_NATIVE_V2.md  app-store-strategy.md  dictionary-expansion.md  tasks.md
apps/illakiya/docs/research/: SANGAM-MODEL.md  huffman-map.md
apps/illakiya/docs/v2/: roadmap.md
apps/illakiya/scripts/: build-apk.sh  generate-bindings.sh
apps/illakiya/web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/illakiya/web/src/: App.tsx  styles.css
apps/oviya/docs/: PRIVACY-POLICY-DRAFT.md
apps/yazhi-auth/src/data/: tasks.md
apps/yazhi-corpus-engine/data/sangam/pm0028/: 0001_aingurunuru_in_tamil_script_unicode_form.txt  BOOK.txt
apps/yazhi-corpus-engine/src/data/: sangam_extractor.md  sources-of-truth.md  stopwords_ta.txt  tasks.md
docs/v2/: multilingual.md  roadmap.md
src/core/: layout.json
src/data/: tasks.md
src/web-prototype/: index.html  keyboard.js  manifest.json  style.css  sw.js
(+546 files in other folders)
