[package]
name = "illakiya-core"
version = "0.2.0"
edition = "2021"

[dependencies]
uniffi = { version = "0.25", features = ["build", "cli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
lazy_static = "1.4"
log = "0.4"
# ONNX Runtime for Adhan-Sandhi Phase 2
ort = { version = "1.16", features = ["load-dynamic"], optional = true }

[features]
default = []
onnx = ["ort"]

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[lib]
crate-type = ["cdylib", "staticlib"]
